# askaccess-ai

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: document_store.py  ingestion.py  main.py  query.py  query_processor.py  response_generator.py
data/: .gitkeep  document_metadata.json
data/vector_store/: index.faiss  index.pkl
reports/: MVP_eval.md
tests/: mock_openai.py  test_ingestion.py  test_query_accuracy.py
tests/test_data/: bank_reconciliation.txt  data_export.txt  hr_reports.txt  mfa_setup.txt  password_reset.txt  performance_troubleshooting.txt  product_comparison.txt  seed_queries.json  system_requirements.txt  user_management.txt  year_end_closing.txt
